[package]
name = "sparse21"
description = "Sparse Matrix Solver"
readme = "readme.md"
license = "BSD-3-Clause"
version = "0.2.1"
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"

